[project]
name = "stack_fetcher_bakircius"
version = "0.5.0"
authors = [
  { name="bakircius", email="burakbakirci@gmail.com" },
]
description = "A small fetcher for Stack Exchange API"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "pandas",
    "numpy"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/bakircius/stack-exchange-fetcher"
Issues = "https://github.com/bakircius/stack-exchange-fetcher/issues"
